# doit

./: .env  .gitignore  :memory  Cargo.toml  README.md  run.sh  tasks.db
.github/workflows/: ci.yml  mac.yml  rust.yml  windows.yml
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2023-04-14-190146_create_tasks/: down.sql  up.sql
migrations/2023-04-26-142158_create_tasks/: up.sql
src/: main.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/models/: task_tests.rs
src/services/: mod.rs  task.rs  task_tests.rs
src/utils/: mod.rs  parse.rs  sort.rs
