[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-cors = "0.6.4"
chrono = {version = "0.4.24", features = ["serde"]}
diesel = {version = "2.0.0", features = ["postgres", "uuid", "chrono", "r2d2"]}
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
uuid = {version = "1.3.1", features = ["serde", "v4"]}
diesel_migrations = "2.0.0"
env_logger="0.10.0"

[dev-dependencies]
serial_test = "2.0.0"
